Fix spacing issue on hero

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -12,7 +12,9 @@
 .hero .description {
   display: flex;
   flex-flow: column nowrap;
+  justify-content: space-between;
   margin-right: 100px;
+  height: 175px;
 }
 
 .imageContainer {
